# kernelci-core

./: .gitignore  .gitreview  .pre-commit-config.yaml  .travis.yml  HACKING  INSTALL  INSTALL.md  Makefile  README  README.md  build-complete.sh  build-configs.yaml  build.py  db-configs.yaml  docker-env  dtvout  elf.py  format.py  gen-health-checks.sh.ok  kci  kci-argparse  kci-bisect-lava-v2-callback  kci-bisect-push-results  kci-click  kci-typer  kci_bisect  kci_build  kci_data  kci_rootfs  kci_test  kernelci-argparse.toml  kernelci-click.toml  kernelci-labs.cfg  kernelci.conf.sample  kernelci.toml.sample  lab-configs.yaml  labs.ini  lava-bisect.sh  lava-dispatcher-functional-tests.sh  lava-dispatcher-functional.sh  (+34 more)
.github/ISSUE_TEMPLATE/: kernelci-api-tokens.md  new-kernel-branch.md  new-kernelci-api-tokens.md
.github/workflows/: docker_images.yml  ghcr_prune.yml  main.yml  production.yml  project.yml  rootfs.yml  staging.yml
ansible/: hosts  site.yml
ansible/group_vars/: all
ansible/host_vars/: api.armcloud.us  api.kernelci.org  images.armcloud.us  kernel-ci-backend  new-kernelci  staging.api.armcloud.us
app/: .coveragerc  .gitignore  __init__.py  server.py  urls.py
app/celeryqueue/: celery.py  tasks.py
app/handlers/: __init__.py  app.py  base.py  batch.py  bisect.py  boot.py  boot_regressions.py  boot_trigger.py  build.py  build_logs.py  callback.py  common.py  compare.py  count.py  count_distinct.py  dbindexes.py  decorators.py  defconf.py  distinct.py  job.py  job_logs.py  lab.py  report.py  response.py  send.py  stats.py  subscription.py  test_base.py  test_case.py  test_group.py  test_set.py  test_suite.py  token.py  upload.py  version.py
app/models/: __init__.py  base.py  bisect.py  boot.py  build.py  compare.py  defconfig.py  error_log.py  error_summary.py  job.py  lab.py  report.py  stats.py  subscription.py  test_case.py  test_group.py  test_regression.py  test_set.py  test_suite.py  token.py
app/taskqueue/: celery.py  celeryconfig.py  serializer.py  tasks.py
app/tests/: __init__.py
app/utils/: __init__.py  bootimport.py  db.py  dbindexes.py  docimport.py  elf.py  emails.py  errors.py  importjobs.py  json_validator.py  lava_log_parser.py  log.py  log_parser.py  meta_parser.py  report.py  subscribe.py  subscription.py  tests_import.py  upload.py  utc.py  validator.py
config/core/: api-configs.yaml  build-configs-android.yaml  build-configs-chromeos-staging.yaml  build-configs-chromeos.yaml  build-configs-cip.yaml  build-configs-stable.yaml  build-configs-staging.yaml  build-configs.yaml  db-configs.yaml  firmware-configs.yaml  gtucker-configs.yaml  lab-configs.yaml  rootfs-configs-chromeos.yaml  rootfs-configs.yaml  rootfs-images.yaml  runtime-configs.yaml  storage.yaml  test-configs-chromeos.yaml  test-configs-cip.yaml  test-configs-riscv.yaml  test-configs.yaml
config/docker-new/: README.md  clang-12.jinja2  clang-14.jinja2  clang-15.jinja2  clang-16.jinja2  cvehound.jinja2  debos.jinja2  dt-validation.jinja2  gcc-10-arm.jinja2  gcc-10-arm64.jinja2  gcc-10-armv5.jinja2  k8s.jinja2  (+3 more)
doc/: .gitignore  Makefile  _index.md  batch-collection.rst  boot-collection.rst  collection-batch.rst  collection-boot.rst  collection-build.rst  collection-count.rst  collection-defconfig.rst  collection-job.rst  collection-lab.rst  collection-report.rst  collection-send.rst  collection-test-case.rst  collection-test-group.rst  collection-test-set.rst  collection-test-suite.rst  collection-test.rst  collection-token.rst  collection-trigger-boot.rst  collection-trigger.rst  collection-upload.rst  collection-version.rst  collections.rst  conf.py  config.md  contrib.md  count-collection.rst  defconfig-collection.rst  examples.rst  git_clone_optimization.md  index.rst  intro.rst  job-collection.rst  kci_build.md  kci_data.md  kci_rootfs.md  kci_test.md  kci_testsuite.md  (+29 more)
examples/: example_context_usage.py
files/: sysctl.conf
handlers/: main.yml  nginx.yml  reload-apache.yml  stop-apache.yml
jenkins/: bisect.jpl  build-trigger.jpl  build.jpl  buildroot-builder.sh  buster-cros-ec.jpl  buster-crostests.jpl  buster-igt.jpl  buster-v4l2.jpl  buster-xfstests.jpl  buster.jpl  kernel-arch-complete.sh  kernel-defconfig-creator.sh  kernel-single-defconfig-builder.sh  kernel-trigger-tarball.sh  lava-boot-v1.sh  lava-boot-v2.sh  monitor.jpl  rootfs-builder.jpl  rootfs-trigger.jpl  stretch-igt.jpl  stretch-ltp.jpl  stretch-v4l2.jpl  stretch.jpl  stretchtests.jpl  test-runner.jpl
jobs/: bootloader-smoke.json  fastmodel-smoke.json  kvm-smoke.json  master-smoke.json
kernelci/: __init__.py  bisect.py  build.py  cli.py  configs.py  data.py  docker.py  elf.py  k8s.py  kbuild.py  lava.py  legacy.py  rootfs.py  scheduler.py  settings.py  snippet.py  storage.py  test.py
lib/: __init__.py  configuration.py  device_map.py  test_configs.py  text_output.py  utils.py
scripts/: kci-bisect-lava-v2-callback  kci-bisect-push-results  lava-v2-callback.py  push-bisection-results.py
tasks/: host-nickname.yml  main.yml
templates/: base-bashrc  cubieboard3-arm-kvm-boot-template.json  generic-arm-d01-kernel-ci-sata-boot-template.json  generic-arm-fastboot-kernel-ci-boot-template.json  generic-arm-ifc6410-kernel-ci-boot-template.json  generic-arm-ifc6540-kernel-ci-boot-template.json  generic-arm-kernel-ci-boot-template.json  generic-arm-uboot-dtb-kernel-ci-boot-template.json  generic-arm64-kernel-ci-boot-template.json  generic-arm64-uboot-dtb-kernel-ci-boot-template.json  generic-x86-kernel-ci-boot-template.json  generic-x86-kvm-kernel-ci-boot-template.json  host-nickname.sh  juno-arm64-dtb-kernel-ci-boot-template.json  kernel-ci-template.json
test-suites/: cvehound
tests/: kernelci-cli.toml  kernelci-settings.toml  test_cli.py  test_cli_docker.py  test_config_forecast.py  test_configs.py  test_context.py  test_kbuild.py  test_lava.py  test_rootfs_builder.py  test_rootfs_buildroot.py  test_rootfs_cli.py  test_rootfs_compat.py  test_rootfs_config.py  test_rootfs_debos.py  test_rootfs_runner.py  test_runtime.py  test_scheduler.py  test_settings.py
vars/: README.md  buildImage.groovy
(+1091 files in other folders)
