# SPDX-License-Identifier: LGPL-2.1-or-later
#
# Copyright (C) 2024 Collabora Limited
# Author: Jeny Sadadia <jeny.sadadia@collabora.com>

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kernelci"
version = "1.1"
description = "KernelCI core functions"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "LGPL-2.1-or-later"}
dependencies = [
  "azure-storage-blob==12.27.1",
  "azure-storage-file-share==12.23.1",
  "bson==0.5.10",
  "click==8.3.1",
  "cloudevents==1.12.0",
  "docker==7.1.0",
  "jinja2==3.1.6",
  "kubernetes==34.1.0",
  "paramiko==4.0.0",
  "pydantic==2.12.5",
  "pyelftools==0.32",
  "pytest==9.0.2",
  "pyyaml==6.0.3",
  "requests==2.32.5",
  "scp==0.15.0",
  "toml==0.10.2",
]
authors = [
  {name = "KernelCI", email = "kernelci@lists.linux.dev"}
]
maintainers = [
  {name = "Arisu Tachibana" , email = "arisu.tachibana@miraclelinux.com"},
  {name = "Denys Fedoryshchenko", email = "denys.f@collabora.com"},
  {name = "Jeny Sadadia", email = "jeny.sadadia@collabora.com"}
]
classifiers = [
  'Development Status :: 5 - Production/Stable',
  'Environment :: Console',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)',
  'Operating System :: OS Independent',
  'Operating System :: POSIX :: Linux',
  'Programming Language :: C',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Topic :: Software Development :: Build Tools',
  'Topic :: Software Development :: Testing',
]

[project.optional-dependencies]
dev = [
  "mypy==1.19.1",
  "pycodestyle==2.14.0",
  "pylint==4.0.4",
  "pytest-mock==3.15.1",
  "types-PyYAML==6.0.12.20250915",
  "types-requests==2.32.4.20250913",
  "types-urllib3==1.26.25.14",
]

[project.urls]
Homepage = "https://kernelci.org"
Documentation = "https://kernelci.org/docs"
Repository = "https://github.com/kernelci/kernelci-core"

[project.scripts]
kci = "kernelci.scripts.kci:main"
kci_rootfs = "kernelci.scripts.kci_rootfs:main"
