# SPDX-License-Identifier: LGPL-2.1-or-later
#
# Copyright (C) 2024 Collabora Limited
# Author: Jeny Sadadia <jeny.sadadia@collabora.com>

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kernelci"
version = "1.1"
description = "KernelCI core functions"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "LGPL-2.1-or-later"}
dependencies = [
  "azure-storage-blob==12.28.0",
  "azure-storage-file-share==12.24.0",
  "bson==0.5.10",
  "click==8.3.1",
  "cloudevents==1.12.1",
  "docker==7.1.0",
  "jinja2==3.1.6",
  "kubernetes==35.0.0",
  "paramiko==4.0.0",
  "pydantic==2.12.5",
  "pyelftools==0.32",
  "pytest==9.0.2",
  "pyyaml==6.0.3",
  "requests==2.32.5",
  "scp==0.15.0",
  "toml==0.10.2",
]
authors = [
  {name = "KernelCI", email = "kernelci@lists.linux.dev"}
]
maintainers = [
  {name = "Arisu Tachibana" , email = "arisu.tachibana@miraclelinux.com"},
  {name = "Denys Fedoryshchenko", email = "denys.f@collabora.com"},
  {name = "Jeny Sadadia", email = "jeny.sadadia@collabora.com"}
]
classifiers = [
  'Development Status :: 5 - Production/Stable',
  'Environment :: Console',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)',
  'Operating System :: OS Independent',
  'Operating System :: POSIX :: Linux',
  'Programming Language :: C',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Topic :: Software Development :: Build Tools',
  'Topic :: Software Development :: Testing',
]

[project.optional-dependencies]
dev = [
  "mypy==1.19.1",
  "pre-commit==4.3.0",
  "pytest-mock==3.15.1",
  "ruff >= 0.9.0",
  "types-PyYAML==6.0.12.20250915",
  "types-requests==2.32.4.20260107",
  "types-urllib3==1.26.25.14",
]

[project.urls]
Homepage = "https://kernelci.org"
Documentation = "https://kernelci.org/docs"
Repository = "https://github.com/kernelci/kernelci-core"

[project.scripts]
kci = "kernelci.scripts.kci:main"
kci_rootfs = "kernelci.scripts.kci_rootfs:main"

# Ruff — used by CI and pre-commit hooks
[tool.ruff]
target-version = "py39"
# Soft limit for formatter wrapping
line-length = 80

[tool.ruff.lint]
# Ruff defaults (E, F, W) plus import sorting and complexity checking
select = ["E", "F", "W", "I", "C901"]

[tool.ruff.lint.pycodestyle]
# Hard limit — lines beyond this are errors regardless of formatter
max-line-length = 110

[tool.ruff.lint.per-file-ignores]
# Legacy high-complexity entrypoints, to be refactored incrementally
"examples/example_context_usage.py" = ["C901", "E501"]
"kernelci/api/__init__.py" = ["C901"]
"kernelci/api/helper.py" = ["C901"]
"kernelci/build.py" = ["C901"]
"kernelci/context/__init__.py" = ["C901"]
"kernelci/kbuild.py" = ["C901"]
"kernelci/legacy/cli/base.py" = ["C901"]
"kernelci/runtime/__init__.py" = ["C901"]
# Click subcommand modules imported for registration side effects
"kernelci/scripts/kci.py" = ["F401"]
